[project]
name = "violent-crime-correlation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.4",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "numpy>=2.5.0",
    "pandas>=3.0.4",
    "plotly>=6.8.0",
    "psycopg[binary]>=3.3.4",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
]
